情景模拟模块

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "**/slides.md",
         "Slides-text.md",
         "Slides-text.md",
-        "courses/shenlun/lilun/01-shenlungaishu.md"
+        "courses/shenlun/lilun/01-shenlungaishu.md",
+        "courses/mianshi/jiegouhua/qingjingmoni.md",
+        "courses/mianshi/JieGouHua/QingJingMoNi.md"
     ]
 }
