情景模拟头部文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Slides-text.md",
         "courses/shenlun/lilun/01-shenlungaishu.md",
         "courses/mianshi/jiegouhua/qingjingmoni.md",
+        "courses/mianshi/JieGouHua/QingJingMoNi.md",
         "courses/mianshi/JieGouHua/QingJingMoNi.md"
     ]
 }
