谷歌思源字体配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "courses/shenlun/lilun/01-shenlungaishu.md",
         "courses/mianshi/jiegouhua/qingjingmoni.md",
         "courses/mianshi/JieGouHua/QingJingMoNi.md",
-        "courses/mianshi/JieGouHua/QingJingMoNi.md"
+        "courses/mianshi/JieGouHua/QingJingMoNi.md",
+        "courses/mianshi/JieGouHua/QingJingMoNi_副本.md"
     ]
 }
