--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "slidev build",
-    "dev": "slidev Slides-text.md --open",
+    "dev": "slidev --open",
     "export": "slidev export"
   },
   "dependencies": {
