markdown 样式设置 无序列表序号

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "courses/mianshi/jiegouhua/qingjingmoni.md",
         "courses/mianshi/JieGouHua/QingJingMoNi.md",
         "courses/mianshi/JieGouHua/QingJingMoNi.md",
-        "courses/mianshi/JieGouHua/QingJingMoNi_副本.md"
+        "courses/mianshi/JieGouHua/QingJingMoNi_副本.md",
+        "courses/mianshi/JieGouHua/QingJingMoNi.md",
+        "slides.md",
+        "QingJingMoNi_副本.md"
     ]
 }
